--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -2,6 +2,6 @@
   "name": "kidcruiser-dash",
   "compatibility_date": "2026-02-08",
   "assets": {
-    "directory": "./public"
+    "directory": "."
   }
 }
