--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,7 +1,7 @@
 {
-  "name": "kidcruiser-dash",
+  "name": "human-machine-interface-autonomous-pupil-shuttle",
   "compatibility_date": "2026-02-08",
   "assets": {
-    "directory": "."
+    "directory": "./public"
   }
 }
